--- a/whisper_pipeline.ipynb
+++ b/whisper_pipeline.ipynb
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "transcript_estimate = [[seg['start'], seg['end'], seg['text']] for seg in result['segments']]\n",
+    "transcript_estimate = [[seg['start'], seg['end'], seg['text']] for seg in result['segments']] # list of format [[start, end, text],...]\n",
     "print(transcript_estimate)"
    ]
   },
@@ -658,6 +658,64 @@
    ],
    "source": [
     "print(corrected_transcript)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_timestamp(seconds: float, always_include_hours: bool = False, decimal_marker: str = '.'):\n",
+    "    assert seconds >= 0, \"non-negative timestamp expected\"\n",
+    "    milliseconds = round(seconds * 1000.0)\n",
+    "\n",
+    "    hours = milliseconds // 3_600_000\n",
+    "    milliseconds -= hours * 3_600_000\n",
+    "\n",
+    "    minutes = milliseconds // 60_000\n",
+    "    milliseconds -= minutes * 60_000\n",
+    "\n",
+    "    seconds = milliseconds // 1_000\n",
+    "    milliseconds -= seconds * 1_000\n",
+    "\n",
+    "    hours_marker = f\"{hours:02d}:\" if always_include_hours or hours > 0 else \"\"\n",
+    "    return f\"{hours_marker}{minutes:02d}:{seconds:02d}{decimal_marker}{milliseconds:03d}\"\n",
+    "\n",
+    "# write transcript to closed caption file format for web\n",
+    "def write_vtt(transcript: list, file):\n",
+    "    print(\"WEBVTT\\n\", file=file)\n",
+    "    for segment in transcript:\n",
+    "        print(\n",
+    "            f\"{format_timestamp(segment[0])} --> {format_timestamp(segment[1])}\\n\"\n",
+    "            f\"{ ' '.join(segment[2]).replace('-->', '->')}\\n\",\n",
+    "            file=file,\n",
+    "            flush=True,\n",
+    "        )\n",
+    "\n",
+    "# write transcript to closed caption file format\n",
+    "def write_srt(transcript: list, file):\n",
+    "\n",
+    "    for i, segment in enumerate(transcript, start=1):\n",
+    "        # write srt lines\n",
+    "        print(\n",
+    "            f\"{i}\\n\"\n",
+    "            f\"{format_timestamp(segment[0], always_include_hours=True, decimal_marker=',')} --> \"\n",
+    "            f\"{format_timestamp(segment[1], always_include_hours=True, decimal_marker=',')}\\n\"\n",
+    "            f\"{' '.join(segment[2]).strip().replace('-->', '->')}\\n\",\n",
+    "            file=file,\n",
+    "            flush=True,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"BabyGotBack.vtt\", 'w') as f:\n",
+    "    write_vtt(corrected_transcript, f)"
    ]
   },
   {
