wrote module cli

--- a/whisper_pipeline.ipynb
+++ b/whisper_pipeline.ipynb
@@ -358,8 +358,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import chars2vec\n",
-    "c2v_model = chars2vec.load_model('eng_50')"
+    "import kerasoke.chars2vec\n",
+    "c2v_model = kerasoke.chars2vec.load_model('eng_50')"
    ]
   },
   {
